fixed bug involving grid auto rows, unaligned text when zooming out now is constant

--- a/src/ComponentsCSS/Home.css
+++ b/src/ComponentsCSS/Home.css
@@ -18,12 +18,12 @@
 
 .projects-screen {
 	height: 100vh;
-	min-height: 610px;
+	/*min-height: 610px;*/
 }
 
 .container {
 	height: 100%;
-	min-height: 1230px;
+	/*min-height: 1230px;*/
 	width: inherit;
 	overflow-x: hidden;
 }
