--- a/src/ComponentsCSS/Projects.css
+++ b/src/ComponentsCSS/Projects.css
@@ -1,4 +1,5 @@
-.projects-container {
+.projects-container { 
+	/* just a way to center the whole container. inside of the container will be the grid layout*/
 	display: flex;
 	position: relative;
 	color: white;
@@ -13,10 +14,11 @@
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 4ch;
-	grid-auto-rows: 250px;
+	grid-auto-rows: minmax(0, 1fr); /* very necessary to be explicit or else zoom alignments go off*/
 }
 
 .box-4 {
+	/* without this the grid won't center the bottom two boxes*/
 	margin-left: 50%;
 }
 .box-5 {
@@ -31,7 +33,7 @@
 	display: grid;
 	width: 100%;
 	height: 100%;
-	grid-template-rows: 2fr 1fr;
+	grid-template-rows: 2fr 1fr; /* determines the spacing between the display and title sub-boxes of the main box in the grid */
 	overflow: hidden;
 	transition: 0.6s;
 }
@@ -60,4 +62,18 @@
 .grid > a:hover {
 	transform: scale(1.1);
 	cursor: pointer;
+}
+
+.video-insert{
+	max-height: 50%;
+	/*
+    right: 0; 
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto; 
+    height: auto; 
+    z-index: -100;
+    background-size: cover;
+    overflow: hidden; */
 }
